Update for running the UI-tests